--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,15 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.csv
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+
+junk.py
 
 # Installer logs
 pip-log.txt
